# Fantasmagoriec

./: .gitignore  CMakeLists.txt  README.md  cmake_regen.txt  demo_log.txt  demo_stdout.txt  freetype_patch.cmake  full_log.txt
.continue/rules/: shadowelevationphase3.md
archive/legacy_source/: aggressive_cleanup.py  clean_build_log.txt  compile_err_v4.txt  deep_cleanup.py  final_build_log.txt  final_stab_log.txt  full_build_log.txt  impl_err.txt  make_output.txt  opengl_err.txt  test_compile.cpp  widget_demo_err_v2.txt  widgets_obj_final.txt
archive/legacy_v3/: fanta_core.hpp  fanta_widgets_unified.hpp
archive/src_render_legacy/: render_tree.hpp
archive/src_scripting/: script_engine.cpp
archive/unused_backends/: d3d11_backend.cpp  gles_backend.cpp  opengl_backend.cpp  opengl_backend.hpp  vulkan_backend.cpp  vulkan_backend.hpp  webgpu_backend.cpp
build_mingw/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
demos/: advanced_demo.cpp  complex_demo.cpp  crystal_demo.cpp  flexbox_demo.cpp  focus_demo.cpp  graph_demo.cpp  interaction_demo.cpp  interactive_demo.cpp  juice_demo.cpp  rich_demo.cpp  scroll_demo.cpp  semantic_demo.cpp  settings_demo.cpp  theme_demo.cpp  ugly_demo.cpp  v5_demo.cpp  visual_demo.cpp  wire_demo.cpp
docs/: API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  PHASE2_DESIGN.md  addons.md  architecture.md  dependency_graph.md  migration.md  widgets.md
include/: fanta.h  fanta_config.h  fanta_id.h  fanta_reactive.h  fanta_views.h
legacy_source/: CMakeLists.txt  README.md  check_corruption.py  cmake_unified_log.txt  compile_err.txt  demo_obj_final.txt  widget_demo_err.txt  widget_demo_err_v3.txt
legacy_source/src/core/: layout.hpp
legacy_source/src/demos/: demo_runner.cpp  dx_test.cpp  widget_demo.cpp
legacy_source/src/input/: gesture.hpp
legacy_source/src/platform/: opengl.cpp  opengl.hpp
legacy_source/src/plugin/: plugin.hpp
legacy_source/src/render/: path_render.hpp
legacy_source/src/shaders/: sdf_line.frag
legacy_source/src/style/: CMakeLists.txt  system_theme.hpp  theme.hpp
legacy_source/src/v1_archive/: test_compile.cpp  test_style.cpp
legacy_source/src/v1_archive/core/: application.cpp  state.hpp  ui_context.hpp
legacy_source/src/v1_archive/input/: focus.cpp
legacy_source/src/v1_archive/render/: font.cpp  font.hpp  font_manager.cpp  font_manager.hpp  renderer.hpp
legacy_source/src/widgets/: CMakeLists.txt
legacy_v3/: fanta_core_unified.hpp
legacy_v3/core/: animation.hpp
legacy_v3/platform/: opengl.cpp  opengl.hpp
legacy_v3/render/: render_context.hpp  shader.cpp  text.hpp  ui_renderer.hpp
legacy_v3/shaders/: sdf_circle.frag  sdf_text.vert
legacy_v3/widgets/: button.hpp
reference/ui/: color_picker.cpp  docking.hpp  docking_persistence.cpp  drag_drop.hpp  element_builder.cpp  element_positioning.cpp  gestures.hpp  id_internal.hpp  keyboard_nav.hpp  plot.cpp  plot.hpp  table.hpp  text_input.cpp  text_input.hpp  tree_node.cpp
scripts/: compare_screenshots.py
src/: fanta.cpp  glad.c
src/backend/: backend.hpp  backend_factory.cpp  backend_factory.hpp  d3d11_backend.cpp  d3d11_backend.hpp  drawlist.cpp  drawlist.hpp  drawlist_design.hpp  gles_backend.cpp  gpu_resources.hpp  opengl_backend.cpp  opengl_backend.hpp  opengl_backend_minimal.cpp  sdf_shader.glsl  webgpu_utils.hpp
src/core/: animated_state.hpp  animation.hpp  context.cpp  context.hpp  contexts_internal.hpp  font_types.hpp  history.cpp  input.hpp  lowering.cpp  markdown.hpp  memory.hpp  plugin_loader.cpp  plugin_loader.hpp  scheduler.cpp  script_engine.hpp  spring_animation.hpp  spring_physics.hpp  tessellator.hpp  theme_impl.cpp  timeline.cpp  timeline.hpp  types_core.hpp  types_fwd.hpp  types_internal.hpp  undo_redo.cpp  undo_redo.hpp  utf8.hpp  v5_core.cpp
src/element/: grid_layout.cpp  grid_layout.hpp  layout.cpp  layout.hpp
src/platform/: clipboard.cpp  clipboard.hpp  ime.cpp  ime.hpp  mobile_bridge.cpp  native_bridge.cpp  native_bridge.hpp  native_bridge_android.cpp  native_bridge_desktop.cpp  native_dialogs.cpp  native_dialogs.hpp  win32_accessibility.cpp  win32_dialogs.cpp
src/python/: binding.cpp  hot_reload_runner.py  test_ui.py
src/render/: render_tree.cpp  render_tree.hpp
src/scripting/: script_engine.hpp
src/text/: font_manager.cpp  font_manager.hpp  glyph_cache.cpp  glyph_cache.hpp  markdown.cpp  markdown.hpp  rich_text.cpp  rich_text.hpp  text_layout.cpp  text_layout.hpp  text_shaper.cpp  text_shaper.hpp
src/tools/: benchmark_main.cpp  inspector.cpp  inspector.hpp  profiler.cpp  profiler.hpp
src/ui/: color_picker.hpp  context_menu.cpp  (+12 more)
src/v2/: CMakeLists.txt  fanta_core.hpp  fanta_render.hpp  fanta_widgets.hpp  fantasmagorie.hpp  test_compile.cpp  test_security.cpp
src/v2/a11y/: accessibility.hpp
src/v2/core/: CMakeLists.txt  context.cpp  context.hpp  debug.cpp  debug.hpp  layout.cpp  layout.hpp  node.hpp  types.hpp
src/v2/demos/: demo_runner.cpp  dx_test.cpp
src/v2/input/: gesture.hpp
src/v2/platform/: CMakeLists.txt  mobile.hpp  native.hpp
src/v2/playground/: CMakeLists.txt  playground.cpp  playground.hpp
src/v2/plugin/: plugin.hpp
src/v2/profiler/: profiler.hpp
src/v2/render/: CMakeLists.txt  backend.hpp  draw_icon.cpp  draw_list.hpp  renderer.cpp  renderer.hpp
src/v2/render/opengl/: backend_gl.cpp  backend_gl.hpp
src/v2/script/: engine.hpp
src/v2/style/: system_theme.hpp  theme.hpp
src/v2/widgets/: CMakeLists.txt  builder_base.hpp  button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  icon.cpp  icon.hpp  inspector.hpp  label.cpp  label.hpp  markdown.cpp  markdown.hpp  popup.cpp  popup.hpp  scroll_area.cpp  scroll_area.hpp  scroll_panel.cpp  scroll_panel.hpp  slider.cpp  slider.hpp  table.cpp  table.hpp  theme_editor.cpp  theme_editor.hpp  tree.cpp  tree.hpp  widget_base.cpp  widget_base.hpp  widgets.hpp  window.cpp  window.hpp
src/v3/: CMakeLists.txt  demo.cpp
src/v3/core/: animation.hpp  font_manager.hpp  glyph_atlas.hpp  paint_list.hpp  path.hpp  path_render.hpp  render_context.hpp  shader.cpp  text.hpp  types.hpp
src/v3/platform/: opengl.cpp  opengl.hpp
(+88 files in other folders)
